2016-01-11 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/cbox.py: Now, combox starts configuration when the
	configuration directory does not exist or when the configuration
	file does not exist.

2016-01-10 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/gui.py: Rewrote/Added docstrings; they're sphinx friendly
	now.
	* combox/log.py: Rewrote doctrings; they're sphinx friendly now.
	* docs/api/combox.gui.rst: Added.
	* docs/api/combox.log.rst: Added.
	* docs/api/index.rst: Added api/combox.gui, api/combox.log to toctree.

2016-01-07 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/config.py: Rewrote all docstrings; they're sphinx
	friendly now.
	* docs/api/combox.config.rst: Added.
	* docs/api/index.rst: Added api/combox.config to toctree.

2016-01-05 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/cbox.py: Rewrote all docstrings; they're sphinx friendly
	now.
	* docs/api/combox.cbox.rst: Added.
	* docs/api/index.rst: Add api/combox.cbox to toctree.

2016-01-02 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/events.py: Rewrote all docstrings; they're sphinx
	friendly now.
	* docs/api/combox.events.rst: Added.
	* docs/api/combox.silo.rst: Added.
	* docs/api/index.rst: Added api/combox.events, api/combox.silo to
	toctree.
	* docs/conf.py: Added link to watchdog API docs in the
	`intersphinx_mapping` dictionary.
	* docs/rsync-exclude.filter: Added.
	* Makefile: Updated rsync command under the `upload-docs` target;
	added --exclude-from option pointing to
	`docs/rsync-exclude.filter`.

2015-12-25 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/silo.py: Rewrote all docstrings; they're sphinx friendly
	now.

2015-12-24 Siddharth Ravikumar <sravik@bgsu.edu>

	* setup.py: updated `description`.
	* docs/index.rst: Removed `gnu`, `osx`, `windows`, `setup-combox`
	from toctree; Added `releases` and `setup/index` to toctree.
	* docs/gnu.rst: Removed.
	* docs/osx.rst: Removed.
	* docs/setup-combox.rst: Removed.
	* docs/windows.rst: Removed.